Fixed the columns

--- a/index.html
+++ b/index.html
@@ -310,182 +310,182 @@
             <span class="rw rwl text-center" style="width: 37%; border-bottom: 1px solid #6a8769;">
                 <div class="">CUMULATIVE RESULT</div>
                 <span class="d-flex justify-content-between" style="margin-left: 0; padding-left: 0; border-top: 1px solid #6a8769; border-bottom: 1px solid #6a8769;">
-                    <span class="rw rwl bg-warning text-center" style="width: 8%; margin-left: 0;">S/N</span>
+                    <!-- <span class="rw rwl bg-warning text-center" style="width: 8%; margin-left: 0;">S/N</span> -->
                     <span class="rw rwl bg-warning text-center" style="width: 20%; margin-left: 0;">1<sup>st</sup> TERM</span>
                     <span class="rwl bg-warning" style="width: 20%; margin-left: 0;">2<sup>nd</sup> TERM</span>
                     <span class="rwl bg-warning" style="width: 20%; margin-left: 0;">3<sup>rd</sup> TERM</span>
-                    <span class="rwl bg-warning" style="width: 32%; margin-left: 0;"></span>
+                    <span class="rwl bg-warning" style="width: 40%; margin-left: 0;"></span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;"></span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">100</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;"></span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">100</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">100</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">100</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">TOTAL</span>
                     <span class="rwl" style="width: 11%; margin-left: 0;">AVG.</span>
-                    <span class="rwl" style="width: 7%; margin-left: 0;">G</span>
+                    <span class="rwl" style="width: 15%; margin-left: 0;">GRADE</span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;">1</span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">76</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;">1</span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">76</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">44</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">34</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">154</span>
                     <span class="rwl" style="width: 11%;">51.4</span>
-                    <span class="rwl text-danger" style="width: 7%;">F</span>
+                    <span class="rwl text-danger" style="width: 15%;">F</span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;">2</span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">76</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;">2</span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">76</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">44</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">34</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">154</span>
                     <span class="rwl" style="width: 11%;">51.4</span>
-                    <span class="rwl text-success" style="width: 7%;">P</span>
+                    <span class="rwl text-success" style="width: 15%;">P</span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;">3</span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">76</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;">3</span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">76</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">44</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">34</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">154</span>
                     <span class="rwl" style="width: 11%;">51.4</span>
-                    <span class="rwl text-danger" style="width: 7%;">F</span>
+                    <span class="rwl text-danger" style="width: 15%;">F</span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;">4</span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">76</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;">4</span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">76</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">44</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">34</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">154</span>
                     <span class="rwl" style="width: 11%;">51.4</span>
-                    <span class="rwl text-success" style="width: 7%;">A</span>
+                    <span class="rwl text-success" style="width: 15%;">A</span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;">5</span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">76</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;">5</span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">76</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">44</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">34</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">154</span>
                     <span class="rwl" style="width: 11%;">51.4</span>
-                    <span class="rwl" style="width: 7%;">A</span>
+                    <span class="rwl" style="width: 15%;">A</span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;">6</span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">76</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;">6</span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">76</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">44</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">34</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">154</span>
                     <span class="rwl" style="width: 11%;">51.4</span>
-                    <span class="rwl" style="width: 7%;">A</span>
+                    <span class="rwl" style="width: 15%;">A</span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;">7</span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">76</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;">7</span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">76</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">44</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">34</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">154</span>
                     <span class="rwl" style="width: 11%;">51.4</span>
-                    <span class="rwl" style="width: 7%;">P</span>
+                    <span class="rwl" style="width: 15%;">P</span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;">8</span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">76</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;">8</span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">76</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">44</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">34</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">154</span>
                     <span class="rwl" style="width: 11%;">51.4</span>
-                    <span class="rwl" style="width: 7%;">C</span>
+                    <span class="rwl" style="width: 15%;">C</span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;">9</span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">76</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;">9</span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">76</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">44</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">34</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">154</span>
                     <span class="rwl" style="width: 11%;">51.4</span>
-                    <span class="rwl" style="width: 7%;">A</span>
+                    <span class="rwl" style="width: 15%;">A</span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;">10</span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">76</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;">10</span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">76</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">44</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">34</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">154</span>
                     <span class="rwl" style="width: 11%;">51.4</span>
-                    <span class="rwl" style="width: 7%;">C</span>
+                    <span class="rwl" style="width: 15%;">C</span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;">11</span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">76</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;">11</span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">76</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">44</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">34</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">154</span>
                     <span class="rwl" style="width: 11%;">51.4</span>
-                    <span class="rwl" style="width: 7%;">P</span>
+                    <span class="rwl" style="width: 15%;">P</span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;">12</span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">76</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;">12</span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">76</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">44</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">34</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">154</span>
                     <span class="rwl" style="width: 11%;">51.4</span>
-                    <span class="rwl" style="width: 7%;">F</span>
+                    <span class="rwl" style="width: 15%;">F</span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;">13</span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">76</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;">13</span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">76</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">44</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">34</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">154</span>
                     <span class="rwl" style="width: 11%;">51.4</span>
-                    <span class="rwl" style="width: 7%;">F</span>
+                    <span class="rwl" style="width: 15%;">F</span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;">14</span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">76</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;">14</span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">76</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">44</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">34</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">154</span>
                     <span class="rwl" style="width: 11%;">51.4</span>
-                    <span class="rwl" style="width: 7%;">A</span>
+                    <span class="rwl" style="width: 15%;">A</span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;">15</span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">76</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;">15</span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">76</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">44</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">34</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">154</span>
                     <span class="rwl" style="width: 11%;">51.4</span>
-                    <span class="rwl" style="width: 7%;">C</span>
+                    <span class="rwl" style="width: 15%;">C</span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;">16</span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">76</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;">16</span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">76</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">44</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">34</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">154</span>
                     <span class="rwl" style="width: 11%;">51.4</span>
-                    <span class="rwl" style="width: 7%;">D</span>
+                    <span class="rwl" style="width: 15%;">D</span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;">17</span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">76</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;">17</span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">76</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">44</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">34</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">154</span>
                     <span class="rwl" style="width: 11%;">51.4</span>
-                    <span class="rwl" style="width: 7%;">C</span>
+                    <span class="rwl" style="width: 15%;">C</span>
                 </span>
                 <span class="d-flex justify-content-between border-bottom">
-                    <span class="rw text-center" style="width: 8%; margin-left: 0;">18</span>
-                    <span class="rw rwl text-center" style="width: 20%; margin-left: 0;">76</span>
+                    <!-- <span class="rw text-center" style="width: 8%; margin-left: 0;">18</span> -->
+                    <span class="rw text-center" style="width: 20%; margin-left: 0;">76</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">44</span>
                     <span class="rwl" style="width: 20%; margin-left: 0;">34</span>
                     <span class="rwl" style="width: 14%; margin-left: 0;">154</span>
                     <span class="rwl" style="width: 11%;">51.4</span>
-                    <span class="rwl" style="width: 7%;">F</span>
+                    <span class="rwl" style="width: 15%;">F</span>
                 </span>
             </span>
         </span>
